compiler/testData/diagnostics/tests/dataClasses/dataObjectDisabled.kt
// LANGUAGE: -DataObjects
<!UNSUPPORTED_FEATURE!>data<!> object Object
